apps/dex/overlays/nishir-tailnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex
spec:
  hostnames:
    - dex.i.shikanime.studio
  parentRefs:
    - name: dex
      sectionName: https
  rules:
    - backendRefs:
        - name: dex
          port: http
