apps/dex/overlays/nishir-tailnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
spec:
  defaultBackend:
    service:
      name: dex
      port:
        name: https
  ingressClassName: tailscale
  tls:
    - hosts:
        - accounts.taila659a.ts.net
