apps/dex/overlays/nishir-tailnet/patch-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex
spec:
  hostnames:
    - dex.i.shikanime.studio
    - accounts.i.shikanime.studio
  parentRefs:
    - name: dex
      sectionName: https
